--- a/package.json
+++ b/package.json
@@ -3,17 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "method-override": "^3.0.0",
-    "mongoose": "^5.7.6",
-    "morgan": "^1.9.1",
-    "request": "^2.88.0"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -28,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/lalaneha/All-the-News-That-s-Fit-to-Scrape/issues"
   },
-  "homepage": "https://github.com/lalaneha/All-the-News-That-s-Fit-to-Scrape#readme"
+  "homepage": "https://github.com/lalaneha/All-the-News-That-s-Fit-to-Scrape#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.7.7",
+    "morgan": "^1.9.1",
+    "request": "^2.88.0"
+  }
 }
